Use port 8090 for local provider

--- a/consumer/build.gradle
+++ b/consumer/build.gradle
@@ -24,4 +24,9 @@ pact {
     pactBrokerPassword = project.pactBrokerPassword
     tags = ['test']
   }
+  broker {
+    pactBrokerUrl = project.pactBrokerUrl
+    pactBrokerUsername = project.pactBrokerUser
+    pactBrokerPassword = project.pactBrokerPassword
+  }
 }
