Change consumer and provider names

--- a/providers/springboot-provider/build.gradle
+++ b/providers/springboot-provider/build.gradle
@@ -40,7 +40,7 @@ task stopProvider(type: KillProcessTask) {
 
 pact {
   serviceProviders {
-    'Our Provider' {
+    'SampleProvider' {
       port = 8090
 
       startProviderTask = startProvider
